--- a/workbook-8/NorthwindTraders/pom.xml
+++ b/workbook-8/NorthwindTraders/pom.xml
@@ -21,5 +21,13 @@
             <artifactId>mysql-connector-j</artifactId>
             <version>8.4.0</version>
         </dependency>
+
+       <!-- org.apache.commons/commons-dbcp2 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.12.0</version>
+        </dependency>
+
     </dependencies>
 </project>
